--- a/blog-details.html
+++ b/blog-details.html
@@ -162,32 +162,6 @@
             </div>
         </div>
     </div>
-    
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Undergraduate Degree</a>
-                            <a class="dropdown-item" href="#">Post-graduate Degree</a>
-                            <a class="dropdown-item" href="#">Masters Degree</a>
-                            <a class="dropdown-item" href="#">Doctoral Degree</a>
-                            <a class="dropdown-item" href="#">PhD Degree</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
-                        placeholder="Keyword">
-                    <div class="input-group-append">
-                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- /.row -->
-    </div> <!-- /.container -->
-    <!-- Header End -->
 
     </div> <!-- /.untree_co-hero -->
     <!-- Header End -->
@@ -210,7 +184,7 @@
                 dream study opportunities abroad through scholarships, trusted partners, and clear guidance.
             </p>
 
-            <img src="https://assets.codepen.io/406785/aa1.jpg" alt="University Campus" />
+            <img src="assets/imgs/IMG-20250321-WA0151.jpg" alt="University Campus" />
 
             <blockquote class="blockquote">"Education is the most powerful weapon which you can use to change the
                 world." - Nelson Mandela</blockquote>
@@ -219,27 +193,11 @@
                 Our tailored services include mentorship, application support, career coaching, and ongoing follow-ups.
             </p>
 
-            <img src="https://assets.codepen.io/406785/aa2.jpg" alt="Students in lecture" />
+            <img src="assets/imgs/IMG-20250324-WA0026.jpg" alt="Students in lecture" />
 
             <p>
                 Be part of the Mtendere family and unlock your global potential.
             </p>
-
-            <!-- Animated Counters -->
-            <div class="row text-center my-5">
-                <div class="col-md-4">
-                    <div class="text-info font-weight-bold display-4 counter-number" data-target="300">0</div>
-                    <p>Students Enrolled</p>
-                </div>
-                <div class="col-md-4">
-                    <div class="text-info font-weight-bold display-4 counter-number" data-target="50">0</div>
-                    <p>Partner Universities</p>
-                </div>
-                <div class="col-md-4">
-                    <div class="text-info font-weight-bold display-4 counter-number" data-target="20">0</div>
-                    <p>Countries Reached</p>
-                </div>
-            </div>
 
             <div class="untree_co-section bg-light py-12">
                 <div class="container">
@@ -256,7 +214,7 @@
                                             about.&rdquo;
                                         </p>
                                         <div class="author mt-4">
-                                            <img src="images/person_1.jpg" alt="Student 1" class="rounded-full w-16 h-16">
+                                            <img src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="Student 1" class="rounded-full w-16 h-16">
                                             <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
                                             <p class="position text-gray-500">Engineering Student, University of Toronto</p>
                                         </div>
@@ -271,7 +229,7 @@
                                             confident about my academic future, and I couldn't be more grateful.&rdquo;
                                         </p>
                                         <div class="author mt-4">
-                                            <img src="images/person_2.jpg" alt="Student 2" class="rounded-full w-16 h-16">
+                                            <img src="assets/imgs/Malawian Students on Campus at Chandigarh University.JPG" alt="Student 2" class="rounded-full w-16 h-16">
                                             <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
                                             <p class="position text-gray-500">Law Student, University of Manchester</p>
                                         </div>
@@ -287,7 +245,7 @@
                                             services!&rdquo;
                                         </p>
                                         <div class="author mt-4">
-                                            <img src="images/person_3.jpg" alt="Student 3" class="rounded-full w-16 h-16">
+                                            <img src="assets/imgs/students on campus CU.JPG" alt="Student 3" class="rounded-full w-16 h-16">
                                             <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
                                             <p class="position text-gray-500">Product Designer, University of California</p>
                                         </div>
@@ -303,7 +261,7 @@
                                             dream in the US!&rdquo;
                                         </p>
                                         <div class="author mt-4">
-                                            <img src="images/person_4.jpg" alt="Student 4" class="rounded-full w-16 h-16">
+                                            <img src="assets/imgs/students/IMG-20230910-WA0107.jpg" alt="Student 4" class="rounded-full w-16 h-16">
                                             <h3 class="text-xl font-semibold text-blue-700">Grace M.</h3>
                                             <p class="position text-gray-500">Computer Science Student, Stanford University</p>
                                         </div>
@@ -316,24 +274,7 @@
                 </div>
             </div>
 
-            <!-- Comment Section -->
-            <div class="comment-section">
-                <h5>Comments</h5>
-                <div id="comment-list" class="mb-3"></div>
-                <div id="comment-form">
-                    <input id="username" class="form-control mb-2" type="text" placeholder="Username" required />
-                    <textarea id="comment" class="form-control mb-2" placeholder="Write your comment here..."
-                        required></textarea>
-                    <button onclick="submitComment()" class="btn btn-info">Post Comment</button>
-                </div>
-            </div>
-
-            <!-- Call to Action -->
-            <div class="call-to-action text-center">
-                <h3>Ready to join Mtendere?</h3>
-                <p>Start your application today and shape your global future.</p>
-                <a href="#apply" class="btn cta-btn">Apply Now</a>
-            </div>
+            
         </div>
     </div>
 
