--- a/team.html
+++ b/team.html
@@ -220,7 +220,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/imgs/mr. rabson.jpg" alt="Mr Rabson Kaluwile">
+                            <img class="img-fluid" src="assets/imgs/team/mr. rabson.jpg" alt="Mr Rabson Kaluwile">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -240,7 +240,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/img/brenda tawina.jpg" alt="Brenda Tawina Kumwembe">
+                            <img class="img-fluid" src="assets/imgs/team/Brend tawina.jpg" alt="Brenda Tawina Kumwembe">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -260,7 +260,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/imgs/ms brenda.jpg" alt="Ms Brenda Gondwe">
+                            <img class="img-fluid" src="assets/imgs/team/ms brenda.jpg" alt="Ms Brenda Gondwe">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -340,7 +340,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="assets/imgs/ortiz" alt="Brenda Tawina Kumwembe">
+                            <img class="img-fluid" src="assets/imgs/team/ortiz.jpg" alt="Brenda Tawina Kumwembe">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -359,18 +359,6 @@
         </div>
     </div>
     <!-- Team End -->
-
-    <!-- Comment Section -->
-    <div class="comment-section">
-        <h5>Comments</h5>
-        <div id="comment-list" class="mb-3"></div>
-        <div id="comment-form">
-            <input id="username" class="form-control mb-2" type="text" placeholder="Username" required />
-            <textarea id="comment" class="form-control mb-2" placeholder="Write your comment here..."
-                required></textarea>
-            <button onclick="submitComment()" class="btn btn-info">Post Comment</button>
-        </div>
-    </div>
 
     <!-- Call to Action -->
     <div class="call-to-action text-center">
