--- a/testimonial.html
+++ b/testimonial.html
@@ -197,35 +197,130 @@
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Testimonial</h6>
                         <h1 class="display-4">What Say Our Students</h1>
                     </div>
-                    <p class="m-0">Dolor est dolores et nonumy sit labore dolores est sed rebum amet, justo duo ipsum
-                        sanctus dolore magna rebum sit et. Diam lorem ea sea at. Nonumy et at at sed justo est nonumy
-                        tempor. Vero sea ea eirmod, elitr ea amet diam ipsum at amet. Erat sed stet eos ipsum diam</p>
+                    <p class="m-0"></p>
                 </div>
                 <div class="col-lg-7">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="bg-light p-5">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>Sed et elitr ipsum labore dolor diam, ipsum duo vero sed sit est est ipsum eos clita est
-                                ipsum. Est nonumy tempor at kasd. Sed at dolor duo ut dolor, et justo erat dolor magna
-                                sed stet amet elitr duo lorem</p>
+                            <p>
+                                Mtendere Education Consult has been a great platform for me to pursue my passion for education. I have been fortunate to receive numerous scholarships and opportunities, and I am grateful for the support and guidance I have received.
+                                
+                            </p>
                             <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="img/testimonial-2.jpg" alt="">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/JanetKandulu.jpg" alt="">
                                 <div>
-                                    <h5>Student Name</h5>
-                                    <span>Web Design</span>
+                                    <h5>
+                                        Janet Kandulu
+                                    </h5>
+                                    <span>
+                                        
+                                    </span>
                                 </div>
                             </div>
                         </div>
                         <div class="bg-light p-5">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>Sed et elitr ipsum labore dolor diam, ipsum duo vero sed sit est est ipsum eos clita est
-                                ipsum. Est nonumy tempor at kasd. Sed at dolor duo ut dolor, et justo erat dolor magna
-                                sed stet amet elitr duo lorem</p>
+                            <p>
+                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of studying abroad. The team was incredibly supportive and provided me with all the resources I needed to succeed. I highly recommend them to anyone looking to study abroad.
+                            </p>
                             <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="img/testimonial-1.jpg" alt="">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
                                 <div>
-                                    <h5>Student Name</h5>
-                                    <span>Web Design</span>
+                                    <h5>
+                                        Dorothy McPherson
+                                    </h5>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-light p-5">
+                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+                            <p>
+                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of studying abroad. The team was incredibly supportive and provided me with all the resources I needed to succeed. I highly recommend them to anyone looking to study abroad.
+                            </p>
+                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
+                                <div>
+                                    <h5>
+                                        Dorothy McPherson
+                                    </h5>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-light p-5">
+                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+                            <p>
+                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of studying abroad. The team was incredibly supportive and provided me with all the resources I needed to succeed. I highly recommend them to anyone looking to study abroad.
+                            </p>
+                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
+                                <div>
+                                    <h5>
+                                        Dorothy McPherson
+                                    </h5>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-light p-5">
+                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+                            <p>
+                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of studying abroad. The team was incredibly supportive and provided me with all the resources I needed to succeed. I highly recommend them to anyone looking to study abroad.
+                            </p>
+                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
+                                <div>
+                                    <h5>
+                                        Dorothy McPherson
+                                    </h5>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-light p-5">
+                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+                            <p>
+                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of studying abroad. The team was incredibly supportive and provided me with all the resources I needed to succeed. I highly recommend them to anyone looking to study abroad.
+                            </p>
+                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
+                                <div>
+                                    <h5>
+                                        Dorothy McPherson
+                                    </h5>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-light p-5">
+                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+                            <p>
+                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of studying abroad. The team was incredibly supportive and provided me with all the resources I needed to succeed. I highly recommend them to anyone looking to study abroad.
+                            </p>
+                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
+                                <div>
+                                    <h5>
+                                        Dorothy McPherson
+                                    </h5>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-light p-5">
+                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+                            <p>
+                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of studying abroad. The team was incredibly supportive and provided me with all the resources I needed to succeed. I highly recommend them to anyone looking to study abroad.
+                            </p>
+                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
+                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
+                                <div>
+                                    <h5>
+                                        Dorothy McPherson
+                                    </h5>
+                                    <span></span>
                                 </div>
                             </div>
                         </div>
