--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
 
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
-        <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="hero overlay" style="background-image: url('assets/imgs/Background/Abroad\ students\ Malawi\ flag.jpg');">
             <div class="container text-center py-5">
                 <h1 class="text-white display-1">Contact Us</h1>
                 <div class="d-inline-flex text-white mb-5">
@@ -162,32 +162,6 @@
         </div>
     </div>
     
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Undergraduate Degree</a>
-                            <a class="dropdown-item" href="#">Post-graduate Degree</a>
-                            <a class="dropdown-item" href="#">Masters Degree</a>
-                            <a class="dropdown-item" href="#">Doctoral Degree</a>
-                            <a class="dropdown-item" href="#">PhD Degree</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
-                        placeholder="Keyword">
-                    <div class="input-group-append">
-                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- /.row -->
-    </div> <!-- /.container -->
-    <!-- Header End -->
-
     <div id="faqModal" class="faq-modal">
         <div class="faq-content">
             <span class="close-btn">&times;</span>
@@ -310,7 +284,7 @@
                     <h2 class="mb-4">Find Us Here</h2>
                     <p class="mb-4">We are located in the heart of Lilongwe, Malawi. Visit us for personalized guidance and support.</p>
                     <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.1234567890123!2d34.123456789012345!3d-13.123456789012345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x123456789abcdefg!2sMtendere%20Education%20Consult%20-%20Study%20Abroad%20Malawi!5e0!3m2!1sen!2smw!4v1234567890123" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.1234567890123!2d34.123456789012345!3d-13.123456789012345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x123456789abcdefg!2sMtendere%20Education%20Consult%20-%20Study%20Abroad%20Malawi!5e0!3m2!1sen!2smw!4v1234567890123" width="auto" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>  
                     <p class="text-center mt-4">
                         <a href="#" class="btn btn-primary btn-sm">
