--- a/blog-details.html
+++ b/blog-details.html
@@ -149,7 +149,7 @@
     </nav>
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
-        <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="hero overlay">
             <div class="container text-center py-5">
                 <h1 class="text-white display-1">Contact Us</h1>
                 <div class="d-inline-flex text-white mb-5">
