--- a/testimonial.html
+++ b/testimonial.html
@@ -150,7 +150,7 @@
 
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
-        <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="container text-center my-5 py-5">
             <div class="container text-center py-5">
                 <h1 class="text-white display-1">What Abroad Students Say?</h1>
                 <div class="d-inline-flex text-white mb-5">
@@ -161,32 +161,6 @@
             </div>
         </div>
     </div>
-    
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Undergraduate Degree</a>
-                            <a class="dropdown-item" href="#">Post-graduate Degree</a>
-                            <a class="dropdown-item" href="#">Masters Degree</a>
-                            <a class="dropdown-item" href="#">Doctoral Degree</a>
-                            <a class="dropdown-item" href="#">PhD Degree</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
-                        placeholder="Keyword">
-                    <div class="input-group-append">
-                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- /.row -->
-    </div> <!-- /.container -->
-    <!-- Header End -->
 
     <!-- Testimonial Start -->
     <div class="container-fluid py-5">
