--- a/course.html
+++ b/course.html
@@ -150,7 +150,7 @@
 
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;"> 
-        <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="hero overlay" style="background-image: url('assets/imgs/Background/International\ studies.jpg');">
             <div class="container text-center py-5">
                 <h1 class="text-white display-1">Scholarships</h1>
                 <div class="d-inline-flex text-white mb-5">
@@ -161,45 +161,14 @@
             </div>
         </div>
     </div>
-    
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Undergraduate Degree</a>
-                            <a class="dropdown-item" href="#">Post-graduate Degree</a>
-                            <a class="dropdown-item" href="#">Masters Degree</a>
-                            <a class="dropdown-item" href="#">Doctoral Degree</a>
-                            <a class="dropdown-item" href="#">PhD Degree</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
-                        placeholder="Keyword">
-                    <div class="input-group-append">
-                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- /.row -->
-    </div> <!-- /.container -->
-    <!-- Header End -->
-
+ 
     <div class="untree_co-section">
         <div class="container">
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="0">
                     <h2 class="line-bottom text-center mb-4">Study Programs</h2>
                     <p>Each student’s academic path is unique, and we’re here to guide you to the best-fit program that
-                        suits your passion and career aspirations. By offering personalized consultations, access to the
-                        latest scholarship opportunities, and a wide network of global universities, we ensure that you
-                        can make an informed decision to pursue your dream program abroad.
-
-                        If you're unsure about which area of study best fits your career goals, our dedicated team of
-                        educational consultants is here to help you discover your true calling.</p>
+                        suits your passion and career aspirations.</p>
                 </div>
             </div>
             <div class="row">
