--- a/gallery.html
+++ b/gallery.html
@@ -161,32 +161,6 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Undergraduate Degree</a>
-                            <a class="dropdown-item" href="#">Post-graduate Degree</a>
-                            <a class="dropdown-item" href="#">Masters Degree</a>
-                            <a class="dropdown-item" href="#">Doctoral Degree</a>
-                            <a class="dropdown-item" href="#">PhD Degree</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
-                        placeholder="Keyword">
-                    <div class="input-group-append">
-                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- /.row -->
-    </div> <!-- /.container -->
-    <!-- Header End -->
-
     <div id="faqModal" class="faq-modal">
         <div class="faq-content">
             <span class="close-btn">&times;</span>
@@ -237,7 +211,7 @@
             <!-- Story Card 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Story Image 1">
+                    <img src="assets/imgs/students/IMG-20230913-WA0056.jpg" class="card-img-top" alt="Story Image 1">
                     <div class="card-body">
                         <h5 class="card-title">Student Success: Jane Doe</h5>
                         <p class="card-text">From Malawi to Canada - A success story of persistence and hard work.</p>
@@ -248,7 +222,7 @@
             <!-- Story Card 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Story Image 2">
+                    <img src="assets/imgs/IMG-20250324-WA0016.jpg" class="card-img-top" alt="Story Image 2">
                     <div class="card-body">
                         <h5 class="card-title">Student Spotlight: John Smith</h5>
                         <p class="card-text">John's journey from Malawi's high school to pursuing his master's in the
@@ -260,7 +234,7 @@
             <!-- Story Card 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Story Image 3">
+                    <img src="assets/imgs/team/IMG_2331.jpg" class="card-img-top" alt="Story Image 3">
                     <div class="card-body">
                         <h5 class="card-title">Scholarship Recipient: Linda</h5>
                         <p class="card-text">How Linda secured a full scholarship for an engineering program in the US.
