--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="d-flex justify-content-between py-3">
 
                 <a href="index.html" class="logo">
-                    <img src="img/Mtendere_logo.png" alt="Mtendere Education Consult" class="img-fluid"
+                    <img src="assets//Mtendere_logo.png" alt="Mtendere Education Consult" class="img-fluid"
                         style="width: 150px; height: auto;">
                 </a>
 
@@ -210,11 +210,11 @@
                     </div>
                 </div>
                 
-                <div class="d-flex mb-3">
+                <div class="mb-3">
                     <div class="btn-icon bg-primary">
                         <i class="fa fa-graduation-cap text-white"></i>
                     </div>
-                    <div class="mt-n1">
+                    <div>
                         <h4>Skilled Instructors</h4>
                         <p>
                             Our instructors are highly qualified and experienced in their
@@ -225,11 +225,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="d-flex mb-3">
+                <div class="mb-3">
                     <div class="btn-icon bg-secondary">
                         <i class="fa fa-certificate text-white"></i>
                     </div>
-                    <div class="mt-n1">
+                    <div>
                         <h4>Career Guidance</h4>
                         <p>
                             Education Consult helps students make informed decisions about their
@@ -240,11 +240,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="d-flex">
+                <div class="mb-3">
                     <div class="btn-icon bg-warning">
                         <i class="fa fa-book-reader text-white"></i>
                     </div>
-                    <div class="mt-n1">
+                    <div>
                         <h4>Programs Of Your Choice</h4>
                         <p class="m-0">
                             We offer a wide range of programs to suit the diverse needs and
