--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <div class="d-flex justify-content-between py-3">
 
                 <a href="index.html" class="logo">
-                    <img src="assets//Mtendere_logo.png" alt="Mtendere Education Consult" class="img-fluid"
-                        style="width: 150px; height: auto;">
+                    <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
+                        style="width: 150px; height: 2rem;">
                 </a>
 
                 <ul class="site-menu js-clone-nav list-unstyled m-0">
