--- a/service.html
+++ b/service.html
@@ -14,9 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/animate.min.css">
@@ -27,12 +25,18 @@
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/scss/style.scss">
+    <link rel="stylesheet" href="assets/scss/_site-blocks.scss">
+    <link rel="stylesheet" href="assets/scss/_variables.scss">
+
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 
 <body>
     <div id="loadingSpinner">
         <div class="spinner"></div>
     </div>
+
     <!-- Mobile Menu -->
     <div class="site-mobile-menu">
         <div class="site-mobile-menu-header">
@@ -40,15 +44,16 @@
                 <span class="icofont-close js-menu-toggle"></span>
             </div>
         </div>
+        <div class="site-mobile-menu-body"></div>
     </div>
 
     <!-- Top Bar -->
     <div class="top-bar py-2 bg-light">
         <div class="container">
-            <div class="row align-items-center justify-content-between">
+            <div class="row justify-content-between">
 
-                <div class="col-md-8 d-flex align-items-center">
-                    <a href="#faqModal" class="small text-dark mr-4" data-toggle="modal">
+                <div class="col-md-8 d-flex">
+                    <a href="#faqModal" class="small mr-4" data-toggle="modal">
                         <i class="fa fa-question-circle mr-1"></i> Have a Question?
                     </a>
                     <a href="tel:" class="small text-dark mr-4">
@@ -74,32 +79,33 @@
     <!-- Navigation -->
     <nav class="site-nav sticky-top shadow-sm bg-white">
         <div class="container">
-            <div class="d-flex align-items-center justify-content-between py-3">
+            <div class="d-flex justify-content-between py-3">
 
                 <a href="index.html" class="logo">
-                    <img src="img/Mtendere_logo.png" alt="Mtendere Education Consult" class="img-fluid"
-                        style="max-height: 50px;">
+                    <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
+                        style="width: 150px; height: 2rem;">
                 </a>
 
-                <ul class="site-menu d-none d-lg-flex list-unstyled m-0">
+                <ul class="site-menu js-clone-nav list-unstyled m-0">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
-                    <li><a href="course.html" class="nav-link">Scholarships</a></li>
-                    <li><a href="service.html" class="nav-link">Services</a></li>
-                    <li><a href="team.html" class="nav-link">Team</a></li>
-                    <li><a href="blog.html" class="nav-link">Blog</a></li>
-                    <li><a href="gallery.html" class="nav-link">Gallery</a></li>
-                    <li><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li><a href="event.html" class="nav-link">events</a></li>
+                    <li><a href="about.html" class="nav-link active">About</a></li>
+                    <li><a href="course.html" class="nav-link active">Scholarships</a></li>
+                    <li><a href="service.html" class="nav-link active">Services</a></li>
+                    <li><a href="team.html" class="nav-link active">Team</a></li>
+                    <li><a href="blog.html" class="nav-link active">Blog</a></li>
+                    <li><a href="gallery.html" class="nav-link active">Gallery</a></li>
+                    <li><a href="contact.html" class="nav-link active">Contact</a></li>
+                    <li><a href="event.html" class="nav-link active">Events</a></li>
                 </ul>
 
-                <div class="d-lg-none d-flex">
-                    <a href="#" class="burger site-menu-toggle js-menu-toggle text-dark">
-                        <span></span>
-                    </a>
-                </div>
+                <a href="#"
+                    class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
+                    data-toggle="collapse" data-target="#main-navbar">
+                    <span></span>
+                </a>
                 <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                    data-toggle="modal">Enroll Now</a>
+                    data-toggle="modal">Enroll now
+                </a>
             </div>
         </div>
     </nav>
